page navigation code refactor

--- a/flexbox.html
+++ b/flexbox.html
@@ -541,18 +541,18 @@
       </div>
       <section class="aside-bar">
         <ul class="theme-list">
-          <li class="theme-item"><a href="#idea-of_flexbox">Ідея flexbox</a></li>
-          <li class="theme-item"><a href="#justify-content">justify-content</a></li>
-          <li class="theme-item"><a href="#align-items">align-items</a></li>
-          <li class="theme-item"><a href="#flex-direction">flex-direction</a></li>
-          <li class="theme-item"><a href="#flex-wrapping">flex-wrap</a></li>
-          <li class="theme-item"><a href="#flex-flow">flex-flow</a></li>
-          <li class="theme-item"><a href="#align-content">align-content</a></li>
-          <li class="theme-item"><a href="#ordering">order</a></li>
-          <li class="theme-item"><a href="#flex-basis">flex-basis</a></li>
-          <li class="theme-item"><a href="#flex-grow">flex-grow</a></li>
-          <li class="theme-item"><a href="#flex-shrink ">flex-shrink</a></li>
-          <li class="theme-item"><a href="#flex">flex</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#idea-of_flexbox">Ідея flexbox</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#justify-content">justify-content</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#align-items">align-items</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-direction">flex-direction</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-wrapping">flex-wrap</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-flow">flex-flow</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#align-content">align-content</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#ordering">order</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-basis">flex-basis</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-grow">flex-grow</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex-shrink ">flex-shrink</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#flex">flex</a></li>
         </ul>
         <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
