--- a/fonts.html
+++ b/fonts.html
@@ -113,7 +113,7 @@
               <td><ul class="browserCheck"><li class="opera">9+</li><li class="chrome">Chrome 4+</li><li class="safari">3.2+</li><li style="background: 0">Opera mobile 10+</li><li style="background: 0">iOS</li><li style="background: 0">Android 3</li></ul></td>
             </tr>
           </table>
-          <h2 class="subtitle">Властивості шрифту</h2>
+          <h2 class="subtitle" id="font-properties">Властивості шрифту</h2>
           <p style="text-indent: 3rem;">Шрифт змінюється за допомоогою властивостей:<span class="blue">font</span>;<span class="blue">font-family</span>;<span class="blue">font-style</span>;<span class="blue">font-variant</span>;<span class="blue">font-weight</span>;<span class="blue">font-size</span>які описан докладніше нижче в таблиці</p>
           <p><b><span class="orange">font</span>: italic small-caps bold 16px/1.5 Arial, sans-serif;</b></p>
           <table class="table striped">
@@ -222,7 +222,7 @@
               </tr>
             </tbody>
           </table>
-          <h2 class="title">Властивості тексту</h2>
+          <h2 class="title" id="text-properties">Властивості тексту</h2>
           <p style="text-indent: 3rem;">Крім змін параметру шрифтів, можливо керувати і властивостями всього тексту.</p>
           <table class="table striped">
             <colgroup>
@@ -406,7 +406,7 @@
               </tr>
             </tbody>
           </table>
-          <h2 class="title">Колір</h2><img src="../../img/color1.png"><img style="margin: auto;" src="../../img/color.png">
+          <h2 class="title" id="color">Колір</h2><img src="../../img/color1.png"><img style="margin: auto;" src="../../img/color.png">
           <p>
             Колір використовується для зміни кольору тексту, фону, градіентів, тіней, границь та ін. Є кілька
             основних методів для задання кольору у CSS:<br><span class="blue">Назва кольору (red, green, blue ...)<br>                   Шістнадцяткова система (#ffffff, #000000, #db4e44 ...), (#fff, #000 ...)<br>                   'Функція' rgb(255, 255, 255) і rgba(255, 255, 255, 1)</span>
@@ -461,13 +461,9 @@
       </div>
       <section class="aside-bar">
         <ul class="theme-list">
-          <li class="theme-item"><a href="#animation-name">animation-name</a></li>
-          <li class="theme-item"><a href="#animation-duration">animation-duration</a></li>
-          <li class="theme-item"><a href="#animation-timing">animation-timing</a></li>
-          <li class="theme-item"><a href="#animation-delay">animation-delay</a></li>
-          <li class="theme-item"><a href="#animation-count">animation-count</a></li>
-          <li class="theme-item"><a href="#animation-direction">animation-direction</a></li>
-          <li class="theme-item"><a href="#3danimations">3d-animation</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#font-properties">Шрифт</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#text-properties">Текст</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#color">Колір</a></li>
         </ul>
         <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
