--- a/media.html
+++ b/media.html
@@ -183,9 +183,9 @@
       </div>
       <section class="aside-bar">
         <ul class="theme-list">
-          <li class="theme-item"><a href="#operators">Оператори</a></li>
-          <li class="theme-item"><a href="#device-types">Типи пристроїв</a></li>
-          <li class="theme-item"><a href="#device-options">Характеристіки прістроїв</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#operators">Оператори</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#device-types">Типи пристроїв</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#device-options">Характеристіки прістроїв</a></li>
         </ul>
         <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
