--- a/position.html
+++ b/position.html
@@ -203,14 +203,14 @@
       </div>
       <section class="aside-bar">
         <ul class="theme-list">
-          <li class="theme-item"><a href="#static">static</a></li>
-          <li class="theme-item"><a href="#relative">relative</a></li>
-          <li class="theme-item"><a href="#fixed">fixed</a></li>
-          <li class="theme-item"><a href="#absolute">absolute</a></li>
-          <li class="theme-item"><a href="#alignment">Горізонтальне/Вертикальне вірівнювання</a></li>
-          <li class="theme-item"><a href="#vertical-alignment">Вертикальне виривнювання</a></li>
-          <li class="theme-item"><a href="#text-alignment">Виривнювання тексту</a></li>
-          <li class="theme-item"><a href="#float">float</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#static">static</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#relative">relative</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#fixed">fixed</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#absolute">absolute</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#alignment">Горізонтальне/Вертикальне вірівнювання</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#vertical-alignment">Вертикальне виривнювання</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#text-alignment">Виривнювання тексту</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#float">float</a></li>
         </ul>
         <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
