--- a/selectors.html
+++ b/selectors.html
@@ -494,10 +494,10 @@
         </div>
         <section class="aside-bar">
           <ul class="theme-list">
-            <li class="theme-item"><a href="#attr-selectors">Селектори по атрибуту</a></li>
-            <li class="theme-item"><a href="#pseudo-classes">Псевдо-класи</a></li>
-            <li class="theme-item"><a href="#cascade">Каскаднисть</a></li>
-            <li class="theme-item"><a href="#pseudo-elements">Псевдо-елементи</a></li>
+            <li class="theme-item"><a class="smoothLink" href="#attr-selectors">Селектори по атрибуту</a></li>
+            <li class="theme-item"><a class="smoothLink" href="#pseudo-classes">Псевдо-класи</a></li>
+            <li class="theme-item"><a class="smoothLink" href="#cascade">Каскаднисть</a></li>
+            <li class="theme-item"><a class="smoothLink" href="#pseudo-elements">Псевдо-елементи</a></li>
           </ul>
           <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
         </section>
