--- a/transform.html
+++ b/transform.html
@@ -185,8 +185,8 @@
       </div>
       <section class="aside-bar">
         <ul class="theme-list">
-          <li class="theme-item"><a href="#transform-origin">transform-origin</a></li>
-          <li class="theme-item"><a href="#transition">transition</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#transform-origin">transform-origin</a></li>
+          <li class="theme-item"><a class="smoothLink" href="#transition">transition</a></li>
         </ul>
         <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
