figure. code is editable now

--- a/block_style.html
+++ b/block_style.html
@@ -50,8 +50,8 @@
           <tbody>
             <tr>
               <td>overflow<br> overflow-x<br> overflow-y</td>
-              <td>
-                Управляє відображенням змісту блокового елемента, якщо воно цілком не поміщається і виходить за область заданих розмірів.<div class='radioRepeat'><a href='javascript:;' class='radio-repeat' data-content='visible'>visible</a> - відображає весь вміст елемента, навіть за межами встановленої висоти і ширини.<br>
+              <td>Управляє відображенням змісту блокового елемента, якщо воно цілком не поміщається і виходить за область заданих розмірів.
+                <div class="radioRepeat"></div><a href='javascript:;' class='radio-repeat' data-content='visible'>visible</a> - відображає весь вміст елемента, навіть за межами встановленої висоти і ширини.<br>
                 <a href='javascript:;' class='radio-repeat' data-content='hidden'>hidden</a> - відображає лише область всередині елемента, інше буде приховано.<br>
                 <a href='javascript:;' class='radio-repeat' data-content='scroll'>scroll</a> - завжди додаються смуги прокрутки.<br>
                 <a href='javascript:;' class='radio-repeat' data-content='auto'>auto</a> - прокрутка додається тільки при необхідності.<div>
@@ -151,9 +151,8 @@
             </tr>
             <tr>
               <td>border-style</td>
-              <td colspan="2">
-                Задає вигляд бордера<div class='brepetRO'><a href='javascript:;' class='radio-repeat' data-content='local'>
-                <div class='border-s' style='border-style:dotted'>dotted</div>
+              <td colspan="2">Задає вигляд бордера
+                <div id="brepetRO"><a class="radio-repeat" href="javascript:;" data-content="local"></a></div><div class='border-s' style='border-style:dotted'>dotted</div>
                 <div class='border-s' style='border-style:dashed'>dashed</div>
                 <div class='border-s' style='border-style:solid'>solid</div>
                 <div class='border-s' style='border-style:double'>double</div>
